# fastapi-multithreading-app

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  random_gen.py
my-random-app/: .gitignore  Dockerfile  package-lock.json  package.json
my-random-app/app/: page.tsx
my-random-app/components/: JobItem.tsx
my-random-app/lib/api/: jobs.tsx
my-random-app/pages/: hello.tsx
my-random-app/pages/history/: [jobId].tsx
